Added a huge amount of control to databases

--- a/Connection/OpSol_Form.resx
+++ b/Connection/OpSol_Form.resx
@@ -123,6 +123,7 @@ Graphics Program
 Project File
 
 For overal settings:
+Autosave databases, or button?
 Preview on Hover
 Open project on open form
 Visual style (Dark mode etc)
